# SPDX-FileCopyrightText: Copyright (c) 2023 by Rivos Inc.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "pci"
version = "0.1.1"
edition = "2021"

[dependencies]
# implicitly defines a feature like "dep:log"
log = { version = "0.4.14", default-features = false, optional = true }
arrayvec = "*"

[features]
default = ["log"]

[dev-dependencies]
env_logger = "0.9"